[gd_scene load_steps=13 format=3 uid="uid://c7akmihwts73n"]

[ext_resource type="PackedScene" uid="uid://damraxuhfs78c" path="res://art/rw_nes_wizard.aseprite" id="1_dxroh"]
[ext_resource type="Script" uid="uid://bcaikhjrgs2wb" path="res://scripts/Player.gd" id="1_qlg0r"]
[ext_resource type="PackedScene" uid="uid://du7sed0ba4hwb" path="res://scenes/components/hitbox_component.tscn" id="3_dqkch"]
[ext_resource type="Script" uid="uid://bafwfibqoeefs" path="res://scripts/state machine/StateMachine.gd" id="3_qhqgy"]
[ext_resource type="PackedScene" uid="uid://c0jtf3aledqtc" path="res://scenes/components/health_component.tscn" id="3_ur7pv"]
[ext_resource type="Script" uid="uid://bihtkqsfgfufq" path="res://scripts/state machine/player/PlayerIdle.gd" id="4_dqkch"]
[ext_resource type="Script" uid="uid://kp23plg38quo" path="res://scripts/state machine/player/PlayerJump.gd" id="6_tuyoq"]
[ext_resource type="Script" uid="uid://bqw70ua0dmdxc" path="res://scripts/state machine/player/PlayerLand.gd" id="7_fjrip"]
[ext_resource type="Script" uid="uid://c7im35wj6tkax" path="res://scripts/state machine/player/PlayerDamaged.gd" id="9_ur7pv"]
[ext_resource type="Script" uid="uid://d3xtev55l2f7g" path="res://scripts/state machine/player/PlayerThrow.gd" id="10_y4r1p"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lfa7q"]
radius = 2.0
height = 10.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qlg0r"]
radius = 3.0
height = 14.0

[node name="Wizard" type="CharacterBody2D" groups=["Player"]]
z_index = 1
collision_layer = 129
script = ExtResource("1_qlg0r")

[node name="AnimatedSprite2D" parent="." instance=ExtResource("1_dxroh")]
animation = &"damage"
autoplay = "run"
frame = 4
frame_progress = 1.0

[node name="HealthComponent" parent="." instance=ExtResource("3_ur7pv")]

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component") groups=["Player"] instance=ExtResource("3_dqkch")]
health_component = NodePath("../HealthComponent")
iframes = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_lfa7q")

[node name="BounceRayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 7)
target_position = Vector2(0, 5)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_qhqgy")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("4_dqkch")
player = NodePath("../..")
metadata/_custom_type_script = "uid://bihtkqsfgfufq"

[node name="Jump" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("6_tuyoq")
player = NodePath("../..")
jump_velocity = -220.0
metadata/_custom_type_script = "uid://kp23plg38quo"

[node name="Land" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("7_fjrip")
player = NodePath("../..")
land_time = 0.2
metadata/_custom_type_script = "uid://bqw70ua0dmdxc"

[node name="Damaged" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("9_ur7pv")
player = NodePath("../..")
damage_time = 0.8
bounce_power = -100.0
metadata/_custom_type_script = "uid://c7im35wj6tkax"

[node name="Throw" type="Node" parent="State Machine" node_paths=PackedStringArray("player")]
script = ExtResource("10_y4r1p")
player = NodePath("../..")
throw_timer = 0.2
metadata/_custom_type_script = "uid://d3xtev55l2f7g"

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_qlg0r")

[connection signal="DamageTaken" from="HealthComponent" to="." method="player_damaged"]
[connection signal="state_changed" from="State Machine" to="." method="anim_update"]
